--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,28 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Press Start 2P", cursive;
+  color: #f3f4f6;
+  background: linear-gradient(90deg, #333235, #d6152fd0, #2b2828, #e71515);
+  background-size: 400% 400%;
+  animation: gradient 17s ease infinite;
+  width: 99.79%;
+  height:99.6%;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
